# llm_aggregation

./: Dockerfile  README.md  config.yml  pyproject.toml  requirements.txt
llm_aggregation/: config.py  logger.py  main.py
llm_aggregation/api/: claude.py  deepseek.py  openai.py  proxy.py  router.py  streaming_response.py
llm_aggregation/models/: request_models.py
llm_aggregation/services/: claude_service.py  deepseek_service.py  openai_service.py
